--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+#root {
+  color-scheme: dark;
+}
+
 html, body, #root { height: 100%; width: 100%; }
 body { -webkit-tap-highlight-color: transparent; }
 
